# nova

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: main.rs
crates/nova-cli/src/commands/: build.rs  check.rs  doc.rs  fmt.rs  init.rs  mod.rs  module.rs  repl.rs  run.rs  test.rs
crates/nova-compiler/: Cargo.toml
crates/nova-compiler/src/: lib.rs
crates/nova-compiler/src/ast/: mod.rs
crates/nova-compiler/src/codegen/: mod.rs
crates/nova-compiler/src/formatter/: mod.rs
crates/nova-compiler/src/interpreter/: env.rs  eval.rs  mod.rs  value.rs
crates/nova-compiler/src/lexer/: mod.rs  token.rs
crates/nova-compiler/src/parser/: mod.rs
crates/nova-compiler/src/semantic/: mod.rs
crates/nova-compiler/src/typechecker/: check.rs  env.rs  error.rs  mod.rs  types.rs  unify.rs
crates/nova-runtime/: Cargo.toml
crates/nova-runtime/src/: lib.rs
crates/nova-runtime/src/ffi/: mod.rs
crates/nova-runtime/src/memory/: mod.rs
crates/nova-runtime/src/module/: mod.rs
docs/: NOVA_FEATURES.md
examples/: fibonacci.nova  hello.nova  math.nova  showcase.nova
